# rustfuzz

./: .gitignore  Cargo.toml  README.md  rustfuzz.example.toml  wordlist.txt
payloads/: xss.txt
src/: main.rs
wordlists/: w2.txt
