[package]
name = "rustfuzz"
version = "3.3.0"
edition = "2021"
authors = ["Fuad Alizada fuadelizade6@gmail.com"]
license = "LICENSE"
description = "Website Fuzzer implementation in Rust"
repository = "https://github.com/martian58/rustfuzz.git"
readme = "README.md"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
indicatif = "0.17"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "cookies", "stream", "rustls-tls", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
url = "2.5"
csv = "1.3"
toml = "0.8"


[package.metadata.deb]
maintainer = "martian58"
license-file = "LICENSE"




[package.metadata.rpm]
package = "rustfuzz"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
rustfuzz = { path = "/usr/bin/rustfuzz" }
